<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/afflogtutor1"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/RegisterBtnMM"
        android:layout_width="135dp"
        android:layout_height="36dp"
        android:layout_below="@+id/startbtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="#E2009688"
        android:contentDescription="@string/button_that_starts_the_app"
        android:text="@string/register"
        android:textColor="#F2F7F8"
        android:textSize="18sp" />

    <Button
        android:id="@+id/startbtn"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_below="@+id/loginPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="#E2009688"
        android:contentDescription="@string/button_that_starts_the_app"
        android:text="@string/login"
        android:textColor="#F0F4F4"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="315dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:autofillHints="Username"

        android:background="#74009688"
        android:drawableStart="@drawable/ic_action_user"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:text=""
        android:textColorHighlight="#00BCD4"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/loginUsername"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:autofillHints="Password"

        android:background="#74009688"
        android:drawableStart="@drawable/ic_action_pass"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

</RelativeLayout>