<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tutorial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Tutorial">

    <Button
        android:id="@+id/infoBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="#E2009688"
        android:hint="Information"
        android:text="?"
        android:textColor="#FBFBFB"
        android:textColorHint="#0B0A0A"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tutorialTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:background="#009688"
        android:text="@string/tutorial_01"
        android:textColor="#CDDC39"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/tutorialBtn"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageViewTutorials"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="165dp"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:background="#E2009688"
        android:text="@string/start"
        android:textColor="#F3EFEF"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnNextTut"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageViewTutorials"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#E2009688"
        android:text="@string/next_tut"
        android:textColor="#F4F1F1"
        android:textSize="16sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnPrevTut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="322dp"
        android:layout_marginRight="322dp"
        android:layout_marginBottom="69dp"
        android:background="#E2009688"
        android:text="@string/prev_tut"
        android:textColor="#F8F1F1"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textTut"
        android:layout_width="384dp"
        android:layout_height="79dp"
        android:layout_below="@+id/tutorialTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/check_to_see_that_you_have_all_of_the_components_of_the_game"
        android:textColor="#0E0D0D"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/myText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:id="@+id/EndCourseBTN"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageViewTutorials"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="165dp"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:background="#E2009688"
        android:text="End Course"
        android:textColor="#F4EFEF"
        android:textSize="16sp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageViewTutorials"
        android:layout_width="wrap_content"
        android:layout_height="219dp"
        android:layout_below="@+id/textTut"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/ch0" />

    <TextView
        android:id="@+id/MoodTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTut"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@+id/CurrentMoodTxt"
        android:layout_toRightOf="@+id/CurrentMoodTxt"
        android:text="Neutral"
        android:textColor="#0E0E0E"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/CurrentMoodTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTut"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:text="Current mood :"
        android:textColor="#0C0C0C"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/ResultmoodTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTut"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_toStartOf="@+id/TutorimageView"
        android:layout_toLeftOf="@+id/TutorimageView"
        android:layout_toEndOf="@+id/MoodTxtView"
        android:layout_toRightOf="@+id/MoodTxtView"
        android:gravity="right"
        android:textColor="#03A9F4"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/TutorimageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textTut"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:srcCompat="@drawable/tutor" />

</RelativeLayout>