<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF"
        tools:context=".Sections">

    <TextView
        android:id="@+id/textViewCh01Sec"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_below="@+id/imageViewSections1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/check_to_see"
        android:textColor="#0A0B0B"
        android:textSize="16sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonch01Sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCh01Sec"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="#E2009688"
        android:text="@string/next_section"
        android:textColor="#F8F6F6"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonch01Sec3prv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCh01Sec"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:background="#E2009688"
        android:text="@string/prev_section"
        android:textColor="#F8F6F6"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/testText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="-5dp"
        android:layout_marginLeft="-5dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="357dp"
        android:layout_marginRight="357dp"
        android:text="TextView"
        android:visibility="invisible" />

    <VideoView
        android:id="@+id/videoViewTut21"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_above="@+id/EndTutButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="47dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/EndTutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCh01Sec"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_toStartOf="@+id/buttonch01Sec"
        android:layout_toLeftOf="@+id/buttonch01Sec"
        android:layout_toEndOf="@+id/buttonch01Sec3prv"
        android:layout_toRightOf="@+id/buttonch01Sec3prv"
        android:background="#E2009688"
        android:text="END"
        android:textColor="#FAF8F8"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageViewSections1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/tut01" />

    <TextView
        android:id="@+id/TxtViewTut22"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/EndTutButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:text="TextView"
        android:textColor="#0C0C0C"
        android:textSize="16sp"
        android:visibility="invisible" />

</RelativeLayout>
